[package]
name = "sqwit"
version = "0.1.0"
edition = "2021"
authors = ["luk3ark"]

[lib]
name = "sqwit"
path = "src/lib.rs"

[[example]]
name = "witify"
path = "examples/witify.rs"

[dependencies]
anyhow = "1.0.86"
regex = "1.10.6"
semver = "1.0.23"
serde_json = "1.0.122"
sqlparser = "0.49.0"
wit-bindgen = { version = "0.29.0", features = ["macros"] }
wit-encoder = "0.215.0"
